fix(pagination): removed flex-wrap and added overflow:hidden

--- a/src/less/pagination/base/pagination.less
+++ b/src/less/pagination/base/pagination.less
@@ -29,10 +29,10 @@ ol.pagination__items {
     .inline-flex-items-centered();
 
     box-sizing: border-box;
-    flex-wrap: wrap;
     height: 44px;
     list-style-type: none;
     margin: 0;
+    overflow: hidden;
     padding: 0;
 
     li:not([hidden]) {
